tests/rosetta/out/Swift/9-billion-names-of-god-the-integer.error
swiftc: exit status 1
/tmp/9-billion-names-of-god-the-integer.swift:5:9: error: cannot assign to value: 'a' is a 'let' constant
  3 |     var n = a.count
  4 |     while n > 1 && a[n - 1] == 0 {
  5 |         a = Array(a[0..<n - 1])
    |         `- error: cannot assign to value: 'a' is a 'let' constant
  6 |         n = n - 1
  7 |     }

/tmp/9-billion-names-of-god-the-integer.swift:35:13: warning: variable 's' was never mutated; consider changing to 'let' constant
 33 |             bv = b[i]
 34 |         }
 35 |         var s = av + bv + carry
    |             `- warning: variable 's' was never mutated; consider changing to 'let' constant
 36 |         res = res + [s % 10]
 37 |         carry = s / 10

/tmp/9-billion-names-of-god-the-integer.swift:47:13: warning: variable 'av' was never mutated; consider changing to 'let' constant
 45 |     var i = 0
 46 |     while i < a.count {
 47 |         var av = a[i]
    |             `- warning: variable 'av' was never mutated; consider changing to 'let' constant
 48 |         var bv = 0
 49 |         if i < b.count {
